[package]
name = "effective-spork"
version = "0.1.0"
authors = ["Kieren Davies"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
csv = "1.3"
derive_more = { version = "1.0", features = ["display"] }
rust_decimal = { version = "1.36", default-features = false, features = [
    "serde",
] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[lints]
clippy.pedantic = "warn"
